syntax = "proto3";

package book;

option go_package = "github.com/dzuura/bookstore-microservice/book-service/proto;bookpb";

service BookService {
  rpc GetBook (BookRequest) returns (BookResponse);
  rpc ListBooks (Empty) returns (BookList);
}

message Empty {}

message BookRequest {
  int32 id = 1;
}

message BookResponse {
  int32 id = 1;
  string title = 2;
  string author = 3;
  double price = 4;
}

message BookList {
  repeated BookResponse books = 1;
}