syntax = "proto3";

package user;

option go_package = "github.com/dzuura/bookstore-microservice/user-service/proto;userpb";

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  int32 id = 1;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
}